--- a/solution1.html
+++ b/solution1.html
@@ -9,10 +9,10 @@
     <h1>Harsh's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr>
-    <h3><a href="./public/birthdayinvite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/birthday invite.png"height='300'  alt="preview of birthday invite project">
+    <h3><a href="./birthdayinvite.html">Birthday Invite Project</a></h3>
+    <img src="./birthday invite.png"height='300'  alt="preview of birthday invite project">
     <hr>
-    <a href="./public/about.html">About me</a>
-    <a href="./public/contact.html">Contact me</a>
+    <a href="./about.html">About me</a>
+    <a href="./contact.html">Contact me</a>
 </body>
 </html>
